[package]
name = "sgip-signal"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"
license = "MIT"
description = "Unofficial Rust bindings for the SIGP Signal API, providing real-time and forecast GHG emissions data for California's electric grid"
keywords = ["california", "sgip", "electricity", "grid", "emissions"]
categories = ["api-bindings", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
reqwest = "0.11"
anyhow = "1"
serde_json = "1"

[dev-dependencies]
tokio = { version = "1.3", features = ["full"] }
tracing-subscriber = "0.2"
structopt = "0.3"
csv = "1.1"
chrono-tz = { version = "0.5", features = ["serde"] }
hdrhistogram = "7"
